--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "material-ui-qrcode-input",
+  "name": "material-ui-qrcode-textfield",
   "version": "1.0.0",
-  "description": "Made with create-react-library",
-  "author": "",
+  "description": "Qrcode scanner function for Material-UI TextField",
+  "author": "mingkin123",
   "license": "MIT",
-  "repository": "/material-ui-qrcode-input",
+  "repository": "https://github.com/mingkin123/material-ui-qrcode-textfield",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -24,10 +24,13 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "react": "^16.0.0",
+    "react-qr-reader": "^2.2.1"
   },
   "devDependencies": {
-    "microbundle-crl": "^0.13.10",
+    "@material-ui/core": "^4.10.2",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -41,10 +44,12 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-qr-reader": "^2.2.1",
     "react-scripts": "^3.4.1"
   },
   "files": [
